--- a/src/components/home/Team/index.module.css
+++ b/src/components/home/Team/index.module.css
@@ -1,10 +1,22 @@
 .root {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 28px;
-  grid-row-gap: 56px;
   list-style-type: none;
+}
 
+.member:not(:last-child) {
+  margin-bottom: 28px;
+}
+
+@media (min-width: 321px) {
+  .root {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 28px;
+    grid-row-gap: 56px;
+  }
+
+  .member:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 @media (width <= 900px) {
